<resources>
    <string name="app_name">Auto Data</string>
    <string name="login_hint">введите логин</string>
    <string name="password_hint">введите пароль</string>
    <string name="btn_enter">Войти</string>
    <string name="enter_all_fields">Заполните все поля</string>
    <string name="password">пароль</string>
    <string name="login">логин</string>
    <string name="auto_data_logo">АвтоData логотип</string>
    <string name="welcome_logo">Шаг 1 логотип</string>
    <string name="next_imageview">Кнопка далее</string>
    <string name="step_two_logo">Шаг 2 логотип</string>
    <string name="step_three_logo">Шаг 3 логотип</string>
    <string name="btn_start">Начать</string>
    <string name="textview_settings">Настройки</string>
    <string name="auto_menu">Автомобиль</string>
    <string name="stock_menu">Биржа</string>
    <string name="offers_menu">Предложения</string>
    <string name="settings_menu">Настройки</string>
    <string name="no_odb_adapter">Не подключен ODB-адаптер</string>
    <string name="menu_car">Автомобиль</string>
    <string name="data_car_package">Изображение набора параметров</string>
    <string name="data_package">Название набора параметров</string>
    <string name="number_of_params">Параметров:</string>
    <string name="data_params">Наборы параметров</string>
    <string name="dataset_name">Название набора параметров</string>
    <string name="button_accept">Применить</string>
    <string name="data_set">Набор параметров навигации</string>
    <string name="data_transfer_status">Статус передачи данных</string>
    <string name="composition_dataset">Состав набора параметров:</string>
    <string name="dataset_compos_img_description">Изображение состава набора параметров</string>
    <string name="dataset_status_red">Изображение статуса передачи данных - красный</string>
    <string name="data_sell_variants">Варианты продажи данных:</string>
    <string name="data_sell_variants_img">Изображение вариантов продажи</string>
    <string name="dataset_price">Стоимость пакета:</string>
    <string name="dataset_term">Срок передачи данных:</string>
    <string name="dataset_term_img">Изображение срока передачи данных</string>
    <string name="data_send_frequency">Частота передачи данных</string>
    <string name="dataset_composition">Состав набора параметров</string>
    <string name="blue_bullet_sign">Значок пункта набора параметров</string>
    <string name="param_name">Название параметра</string>
    <string name="data_sell_options">Варианты продажи данных</string>
    <string name="sell_depersonalized_data">Продажа Оператору деперсонализованных данных</string>
    <string name="marketplace_sell">Продажа на маркетплейсе</string>
    <string name="personalized_data">Персонализированные данные</string>
    <string name="choose_device">Выбор устройства</string>
    <string name="obd_adapter">OBD-адаптер</string>
    <string name="choose_standart_device">Выбрать штатное устройство</string>
    <string name="obd_not_found">OBD-адаптер не найден</string>
    <string name="device_search">Поиск устройства</string>
    <string name="no_vin">VIN не задан</string>
    <string name="vin">VIN</string>
    <string name="bluetooth_devices_list">Список bluetooth устройств</string>
    <string name="stock">Биржа</string>
    <string name="offers">Предложения</string>

</resources>