<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.DeviceSearchActivity">

    <TextView
        android:id="@+id/ObdAdapter"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:gravity="center"
        android:text="@string/obd_adapter"
        android:textColor="@color/black"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/delimetr"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:background="@color/grey_mercury"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ObdAdapter" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavViewMenu"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:backgroundTint="@color/bottom_blue"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_bottom_navigation" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchChooseStandartDevice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="112dp"
        android:minWidth="48dp"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ObdAdapter" />

    <TextView
        android:id="@+id/tvChooseStandartDevice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="48dp"
        android:text="@string/choose_standart_device"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="@+id/switchChooseStandartDevice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/switchChooseStandartDevice"
        app:layout_constraintTop_toTopOf="@+id/switchChooseStandartDevice" />

    <TextView
        android:id="@+id/tvObdFoundation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/obd_not_found"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvChooseStandartDevice" />

    <TextView
        android:id="@+id/textViewObdAdapter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/obd_adapter"
        app:layout_constraintStart_toStartOf="@+id/tvObdFoundation"
        app:layout_constraintTop_toBottomOf="@+id/tvObdFoundation" />

    <Button
        android:id="@+id/btnDeviceSearch"
        android:layout_width="304dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:text="@string/device_search"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewObdAdapter" />

    <Spinner
        android:id="@+id/spinnerVIN"
        android:layout_width="304dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/no_vin"
        app:layout_constraintEnd_toEndOf="@+id/btnDeviceSearch"
        app:layout_constraintStart_toStartOf="@+id/btnDeviceSearch"
        app:layout_constraintTop_toBottomOf="@+id/btnDeviceSearch" />

    <TextView
        android:id="@+id/textViewVIN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vin"
        app:layout_constraintStart_toStartOf="@+id/spinnerVIN"
        app:layout_constraintTop_toBottomOf="@+id/spinnerVIN" />

</androidx.constraintlayout.widget.ConstraintLayout>